# wait-for-it

./: CMakeLists.txt  README.md  ast.cpp  ast.h  exampleerror2.txt  exprast.cpp  lexer.cpp  lexer.h  llvm.pro  main.cpp  main.txt  main2.txt  main2_wrong_operator.txt  main_exam.txt  main_rec.txt  parser.cpp  parser.h  scope.cpp  scope.h  table.cpp  table.h  test1.txt  test10.txt  test11.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt  testwitherrors1.txt  token.h
ast/: binaryexpr.cpp  binaryexpr.h  blockexpr.cpp  blockexpr.h  callexpr.cpp  callexpr.h  doublenumberexpr.cpp  doublenumberexpr.h  expr.cpp  expr.h  functionargumentexpr.cpp  functionargumentexpr.h  functionexpr.cpp  functionexpr.h  functionprototypeexpr.cpp  functionprototypeexpr.h  globalvariableexpr.cpp  globalvariableexpr.h  identifierexpr.cpp  identifierexpr.h  ifexpr.cpp  ifexpr.h  infiniteexpr.cpp  infiniteexpr.h  int32numberexpr.cpp  int32numberexpr.h  literalexpr.h  localvariableexpr.cpp  localvariableexpr.h  numberexpr.h  stringexpr.cpp  stringexpr.h  variableexpr.cpp  variableexpr.h  whileexpr.cpp  whileexpr.h
